--- a/med9/gradient/style.css
+++ b/med9/gradient/style.css
@@ -6,7 +6,7 @@ color: white;
 text-align: center;
 }
 h1{
-	background: linear-gradient(90deg, rgba(2,0,36,1) 34%, rgba(0,69,255,1) 74%);
+	background: radial-gradient(90deg, rgba(2,0,36,1) 34%, rgba(0,69,255,1) 74%);
 	
 }
 h2{
