--- a/med9/gradient/style.css
+++ b/med9/gradient/style.css
@@ -6,7 +6,7 @@ color: white;
 text-align: center;
 }
 h1{
-	background: radial-gradient(90deg, rgba(2,0,36,1) 34%, rgba(0,69,255,1) 74%);
+	background: radial-gradient(circle, rgba(34,193,195,1) 0%, rgba(45,98,253,1) 19%, rgba(45,195,130,1) 44%, rgba(45,253,55,1) 64%);
 	
 }
 h2{
