--- a/med9/card/style.css
+++ b/med9/card/style.css
@@ -18,7 +18,8 @@ article .image{
 article .text{
 	height: 200px;
 	width: 320px;
-	background-color: white;
+background: linear-gradient(90deg, rgba(46,219,177,1) 20%, rgba(245,227,21,1) 73%);
+
 	padding: 20px;
 	display: flex;
 	justify-content: space-between;
